working main login page

--- a/Code/templates/login.html
+++ b/Code/templates/login.html
@@ -1,11 +1,11 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <link rel="stylesheet" type="text/css" href="styles.css">
+  <link rel="stylesheet" type="text/css" href="../static/styles.css">
   <meta charset="UTF-8">
   <title>Scorpio Trips</title>
 </head>
-<body class="maincolor">
+<body>
 <form action="/form_login" method="post">
   <h2></h2>Username:<br>
   <input type="text" name='username'><br>
@@ -19,14 +19,13 @@
   <a href= "my_projects.html">My Projects</a>
   <a href= "my_hobbies.html">My Hobbies</a></h3>  -->
 <div class="container">
-<img src="../photos/backgroung.jpg" alt="rover" style="width:100%;">
-<div class="content">
-<h1>Contact Information</h1>
-<p><a href="tel:534-010-927">tel: 713 204 123</a><br>
-  <a href="mailto:project@scorpio.pwr.edu.pl"><i class="mail"></i>
-  e-mail: z.stypulkowska.wroclaw@gmail.com</A></p>
+  <img src="../static/backgroung.jpg" alt="rover" style="width:100%;">
+  <div class="content">
+    <h1>Contact Information</h1>
+    <p><a href="tel:534-010-927">tel: 713 204 123</a><br>
+      <a href="mailto:project@scorpio.pwr.edu.pl"><i class="mail"></i>
+      e-mail: project@scorpio.pwr.edu.pl</A></p>
+  </div>
 </div>
-</div>
-
 </body>
 </html>
