--- a/Code/static/styles.css
+++ b/Code/static/styles.css
@@ -30,15 +30,18 @@
   }
   
   .container {
+    text-align: center;
     position: relative;
     margin: 0;
   }
   .container .content {
+    text-align: center;
     position: absolute;
-    bottom: 0;
+    top: 20%;
+    left: 40%;
     background: #111810;
     background: rgba(0, 0, 0, 0.5);
-    width: 100%;
+    width: 20%;
     padding: 1.5vw;
     font-size: 1.5vw;
   }
@@ -77,3 +80,15 @@
     position: sticky;
     bottom: 0;
   }  
+
+  .button {
+    border: none;
+    color: white;
+    padding: 15px 32px;
+    text-align: center;
+    text-decoration: none;
+    display: inline-block;
+    font-size: 16px;
+    margin: 4px 2px;
+    cursor: pointer;
+  }
