--- a/Code/templates/login.html
+++ b/Code/templates/login.html
@@ -17,6 +17,7 @@
       <input  name='password' ><br><br>
     <input type="submit" value="Login">
     </form> 
+    <button value="Register">Register</button>
     <h1 >{{info}}</h1>
   </div>
 </div>
