--- a/Code/static/styles.css
+++ b/Code/static/styles.css
@@ -84,11 +84,11 @@
   .button {
     border: none;
     color: white;
-    padding: 15px 32px;
+    padding: 2vw 2vw;
     text-align: center;
     text-decoration: none;
     display: inline-block;
     font-size: 16px;
-    margin: 4px 2px;
+    margin: 6px 6px;
     cursor: pointer;
   }
