--- a/Code/templates/login.html
+++ b/Code/templates/login.html
@@ -17,7 +17,8 @@
       <input  name='password' ><br><br>
     <input type="submit" value="Login">
     </form> 
-    <button value="Register">Register</button>
+    <button value="register.html">Register</button>
+    <button value="forgot_pwd.html">Forgot password?</button>
     <h1 >{{info}}</h1>
   </div>
 </div>
