--- a/Code/static/styles.css
+++ b/Code/static/styles.css
@@ -37,7 +37,7 @@
   .container .content {
     text-align: center;
     position: absolute;
-    top: 35%;
+    top: 50%;
     left: 40%;
     background: #111810;
     background: rgba(0, 0, 0, 0.5);
@@ -91,4 +91,12 @@
     font-size: 16px;
     margin: 6px 6px;
     cursor: pointer;
+  }
+
+  #myVideo {
+    position: fixed;
+    right: 0;
+    bottom: 0;
+    min-width: 100%;
+    min-height: 100%;
   }
