--- a/Code/templates/login.html
+++ b/Code/templates/login.html
@@ -4,11 +4,13 @@
   <link rel="stylesheet" type="text/css" href="../static/styles.css">
   <meta charset="UTF-8">
   <title>Scorpio Trips</title>
+  <video autoplay muted loop id="myVideo">
+    <source src="../static/background.mp4" type="video/mp4">
+  </video>
 </head>
 <body>
 </main>
 <div class="container">
-  <img src="../static/backgroung.jpg" alt="rover" style="width:100%;">
   <div class="content">
     <form action="/form_login" method="post">
       <h2></h2>Username:<br>
@@ -17,8 +19,12 @@
       <input  name='password' ><br><br>
     <input type="submit" value="Login">
     </form> 
-    <button value="register.html">Register</button>
-    <button value="forgot_pwd.html">Forgot password?</button>
+    <form action="/register">
+      <input type="submit" value="Register"/>
+  </form>
+  <form action="/forgot_pwd">
+    <input type="submit" value="Forgot password?"/>
+</form>
     <h1 >{{info}}</h1>
   </div>
 </div>
