--- a/Code/templates/home.html
+++ b/Code/templates/home.html
@@ -1,12 +1,24 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+    <link rel="stylesheet" type="text/css" href="../static/styles.css">
     <meta charset="UTF-8">
     <title>Home</title>
 </head>
 <body>
-<br>
-<h1 align="center">Welcome {{name}} !</h1>
 
-</body>
+    <div class="topnav">
+      <a class="active" href="#home">Home</a>
+      \<a href="/go_login">Login</a></h3>
+      <a href="#news">News</a>
+      <a href="#contact">Contact</a>
+      <a href="#recomend">Our recomendations</a>
+    </div>
+    
+    <div style="padding-left:16px">
+      <h2>Top Navigation Example</h2>
+      <p>Some content..</p>
+    </div>
+    
+    </body>
 </html>
