--- a/Code/templates/home.html
+++ b/Code/templates/home.html
@@ -7,12 +7,25 @@
 </head>
 <body>
 
-    <div class="topnav">
+    <div id="topnav" class="topnav">
       <a class="active" href="#home">Home</a>
-      \<a href="/go_login">Login</a></h3>
-      <a href="#news">News</a>
-      <a href="#contact">Contact</a>
+      <a href="#bestsellers">Bestsellers</a>
       <a href="#recomend">Our recomendations</a>
+      <a href="#discover">Discover</a>
+      <a href="#blog">Blog</a>
+      <a href="#info">Important information</a>
+      <div class="nav">
+        <div id="myLinks">
+            <a href= "insurance.html">Insurance</a>
+            <a href= "travel_law.html">Travel law</a>
+            <a href= "conditions.html">Travel conditions</a>
+        </div>
+        <a href="javascript:void(0);" class="icon" onclick="myFunction()">
+          <i class="fa fa-bars"></i>
+        </a>
+      </div>
+      <a href="#about">About Us</a>
+      <a img href="/go_login"><img style="width:40px;"src="../static/login_icon.png"></a>
     </div>
     
     <div style="padding-left:16px">
@@ -21,4 +34,4 @@
     </div>
     
     </body>
-</html>
+</html> 
