added empty subpages

--- a/Code/templates/bestsellers.html
+++ b/Code/templates/bestsellers.html
@@ -8,12 +8,12 @@
 <body>
 
     <div id="topnav" class="topnav">
-        <a class="active" href="/">HOME</a>
-        <a href="/go_bestsellers">BESTSELLERS</a>
+        <a href="/">HOME</a>
+        <a class="active" href="/go_bestsellers">BESTSELLERS</a>
         <a href="/go_recomend">OUR RECOMENDATIONS</a>
         <a href="/go_discover">DISCOVER</a>
         <a href="/go_blog">BLOG</a>
-        <a href= "/go_insurance.">INSURANCE</a>
+        <a href= "/go_insurance">INSURANCE</a>
         <a href= "/go_travel_law">TRAVEL LAW</a>
         <a href= "/go_conditions">CONDITIONS</a>
         <a href="/go_about">ABOUT US</a>
