--- a/Code/static/styles.css
+++ b/Code/static/styles.css
@@ -103,24 +103,24 @@
 
   .topnav {
     overflow: hidden;
-    background-color: #333;
+    background-color: #f2f2f2;
   }
   
   .topnav a {
     float: left;
-    color: #f2f2f2;
+    color: #111810;
     text-align: center;
     padding: 14px 16px;
     text-decoration: none;
-    font-size: 17px;
+    font-size: 18px;
   }
   
   .topnav a:hover {
-    background-color: #ddd;
-    color: black;
+    background-color: black;
+    color: #EF0B0B;
   }
   
   .topnav a.active {
-    background-color: #04AA6D;
-    color: white;
+    background-color: #EF0B0B;
+    color: black;
   }
