--- a/Code/templates/about.html
+++ b/Code/templates/about.html
@@ -8,15 +8,15 @@
 <body>
 
     <div id="topnav" class="topnav">
-        <a class="active" href="/">HOME</a>
+        <a href="/">HOME</a>
         <a href="/go_bestsellers">BESTSELLERS</a>
         <a href="/go_recomend">OUR RECOMENDATIONS</a>
         <a href="/go_discover">DISCOVER</a>
         <a href="/go_blog">BLOG</a>
-        <a href= "/go_insurance.">INSURANCE</a>
+        <a href= "/go_insurance">INSURANCE</a>
         <a href= "/go_travel_law">TRAVEL LAW</a>
         <a href= "/go_conditions">CONDITIONS</a>
-        <a href="/go_about">ABOUT US</a>
+        <a class="active" href="/go_about">ABOUT US</a>
         <a img href="/go_login"><img style="width:40px;"src="../static/login_icon.png"></a>
     </div>
     
