--- a/Code/templates/login.html
+++ b/Code/templates/login.html
@@ -4,9 +4,6 @@
   <link rel="stylesheet" type="text/css" href="../static/styles.css">
   <meta charset="UTF-8">
   <title>Scorpio Trips</title>
-  <video autoplay muted loop id="myVideo">
-    <source src="../static/background.mp4" type="video/mp4">
-  </video>
 </head>
 <body>
 </main>
@@ -19,10 +16,13 @@
   <a href= "/go_insurance">INSURANCE</a>
   <a href= "/go_travel_law">TRAVEL LAW</a>
   <a href= "/go_conditions">CONDITIONS</a>
-  <a class="active" href="/go_about">ABOUT US</a>
-  <a img href="/go_login"><img style="width:40px;"src="../static/login_icon.png"></a>
+  <a href="/go_about">ABOUT US</a>
+  <a class="active" img href="/go_login"><img style="width:40px;"src="../static/login_icon.png"></a>
 </div>
 <div class="container">
+  <video autoplay muted loop id="myVideo">
+    <source src="../static/background.mp4" type="video/mp4">
+  </video>
   <div class="content">
     <form action="/form_login" method="post">
       <h2></h2>Username:<br>
