--- a/Code/static/styles.css
+++ b/Code/static/styles.css
@@ -1,12 +1,19 @@
 .title, .text, .container .content, .pre, .col, a:link, a:visited {
-    color: #F2F0EB;
+    color: white;
   }
   * {
     box-sizing: border-box;
   }
-  
+
+  body {
+    font-family: "Helvetica", Sans-Serif;
+    background-image: url("../static/stars.jpg");
+    background-size: cover;
+    color: white;
+  }
+
   a:hover {
-    color: #FF69B4;
+    color: red;
   }
   
   .row {
@@ -36,7 +43,7 @@
   .container .content {
     text-align: center;
     position: absolute;
-    top: 50%;
+    top: 100px;
     left: 40%;
     background: #111810;
     background: rgba(0, 0, 0, 0.5);
@@ -48,18 +55,8 @@
   .headline {
     background-color: #FF8000;
     font-size: 1.5vw;
-    color: #111810;
+    color: white;
     padding-top: 1.5vw;
-  }
-  
-  .map {
-    background-color: #FF8000;
-    font-size: 1.5vw;
-    color: #111810;
-    padding-top: 1vw;
-    padding-bottom: 1vw;
-    text-align: center;
-    box-shadow: 0 0 3px 3px #111810 inset;
   }
   
   .text {
@@ -94,25 +91,27 @@
 
   #myVideo {
     position: fixed;
-    top: 50px;
+    top: 0px;
     right: 0;
     bottom: 0;
-    min-width: 80%;
+    min-width: 100%;
     min-height: 100%;
   }
 
   .topnav {
     overflow: hidden;
-    background-color: #f2f2f2;
+    /* background-image: url(../static/stars.jpg); */
+    /* background-size: cover; */
+    /* position: fixed; */
   }
   
   .topnav a {
     float: left;
-    color: #111810;
+    color: white;
     text-align: center;
     padding: 14px 16px;
     text-decoration: none;
-    font-size: 18px;
+    font-size: 17px;
   }
   
   .topnav a:hover {
@@ -123,4 +122,18 @@
   .topnav a.active {
     background-color: #EF0B0B;
     color: black;
+  }
+
+  .row {
+    font-size: 1.5vw;
+  }
+  .row::after {
+    content: "";
+    clear: both;
+    display: table;
+  }
+  
+  .col {
+    float: left;
+    padding: 0.5vw;
   }
