--- a/Code/templates/about.html
+++ b/Code/templates/about.html
@@ -20,7 +20,7 @@
         <a img href="/go_login"><img style="width:40px;"src="../static/login_icon.png"></a>
     </div>
     
-    <div style="padding-left:16px">
+    <div class="" style="padding-left:16px">
       <h2>Top Navigation Example</h2>
       <p>Some content..</p>
     </div>
