--- a/Code/templates/blog.html
+++ b/Code/templates/blog.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+    <link rel="stylesheet" type="text/css" href="../static/blog.css">
     <link rel="stylesheet" type="text/css" href="../static/styles.css">
     <meta charset="UTF-8">
     <title>Home</title>
@@ -21,8 +22,19 @@
     </div>
     
     <div style="padding-left:16px">
-      <h2>Top Navigation Example</h2>
-      <p>Some content..</p>
+        <main>
+            <article class="article">
+                <div class="row">
+                    <img class="col" src="../static/ekosfera.png" style = "width: 200px" alt="Article 1 Image">
+                    <div class="col">
+                        <h2>Article 1: Title</h2>
+                        <p>Published on: October 7, 2023</p>
+                        <p class="summary">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed ac ex nec justo mattis iaculis. Integer vel justo nec leo varius cursus vel vel est.</p>
+                        <a href="https://www.nasa.gov/get-involved/virtual-guest-program/nasa-invites-public-to-share-in-excitement-of-psyche-mission/" class="read-more-button">Read more</a>
+                    </div>
+                </div>
+            </article>
+        </main>
     </div>
     
     </body>
