--- a/Code/templates/login.html
+++ b/Code/templates/login.html
@@ -6,8 +6,11 @@
   <title>Scorpio Trips</title>
 </head>
 <body>
+  <video autoplay muted loop id="myVideo">
+    <source src="../static/background.mp4" type="video/mp4">
+  </video>
 </main>
-<div id="topnav" class="topnav">
+<div id="topnav" class="topnav" style="position: fixed;">
   <a href="/">HOME</a>
   <a href="/go_bestsellers">BESTSELLERS</a>
   <a href="/go_recomend">OUR RECOMENDATIONS</a>
@@ -20,9 +23,7 @@
   <a class="active" img href="/go_login"><img style="width:40px;"src="../static/login_icon.png"></a>
 </div>
 <div class="container">
-  <video autoplay muted loop id="myVideo">
-    <source src="../static/background.mp4" type="video/mp4">
-  </video>
+  
   <div class="content">
     <form action="/form_login" method="post">
       <h2></h2>Username:<br>
