added template for planet choosing

--- a/Code/templates/about.html
+++ b/Code/templates/about.html
@@ -2,6 +2,7 @@
 <html lang="en">
 <head>
     <link rel="stylesheet" type="text/css" href="../static/styles.css">
+    <link rel="stylesheet" type="text/css" href="../static/blog.css">
     <meta charset="UTF-8">
     <title>Home</title>
 </head>
@@ -20,10 +21,79 @@
         <a img href="/go_login"><img style="width:40px;"src="../static/login_icon.png"></a>
     </div>
     
-    <div class="" style="padding-left:16px">
-      <h2>Top Navigation Example</h2>
-      <p>Some content..</p>
-    </div>
+    <main style="padding-left:16px">
+      <div class="row" style="align-content: center;">
+        <div class="col">
+            <h1>
+                SCORPIO TEAM
+            </h1>
+            <h5>
+                opis scorpio
+            </h5>
+        </div>
+        <div class="col">
+            <img class="col" src="../static/ekosfera.png" style = "width: 50%" alt="Team Scorpio">
+        </div>
+      </div><br><br>
+
+      <div class="row" style="align-content: center;">
+        <div class="col">
+            <img class="col" src="../static/ekosfera.png" style = "width: 50%" alt="Team Scorpio">
+        </div>
+        <div class="col">
+            <h1>
+                OUR MISSION
+            </h1>
+            <h5>
+                Mission description
+            </h5>
+        </div>
+      </div><br><br>
+
+      <h1 style="text-align: center">OUR VALUES</h1>
+      <div class="row">
+        <div class="col">
+            <img class="col" src="../static/ekosfera.png" alt="Team Scorpio">
+        </div>
+        <div class="col">
+            <img class="col" src="../static/ekosfera.png" alt="Team Scorpio">
+        </div>
+        <div class="col">
+            <img class="col" src="../static/ekosfera.png" alt="Team Scorpio">
+        </div>
+        <div class="col">
+            <img class="col" src="../static/ekosfera.png" alt="Team Scorpio">
+        </div>
+      </div><br><br>
+
+      <div class="row" style="align-content: center;">
+        <div class="col">
+            <h1>
+                BUILDING SOCIETY
+            </h1>
+            <h5>
+                lanie wody
+            </h5>
+        </div>
+        <div class="col">
+            <img class="col" src="../static/ekosfera.png" style = "width: 50%" alt="Team Scorpio">
+        </div>
+      </div><br><br>
+
+      <div class="row" style="align-content: center;">
+        <div class="col">
+            <img class="col" src="../static/ekosfera.png" style = "width: 50%" alt="Team Scorpio">
+        </div>
+        <div class="col">
+            <h1>
+                RESPONSIBLE TRAVELING
+            </h1>
+            <h5>
+                ha! nope...
+            </h5>
+        </div>
+      </div><br><br>
+    </main>
     
     </body>
 </html> 
