--- a/Code/templates/discover.html
+++ b/Code/templates/discover.html
@@ -21,8 +21,27 @@
     </div>
     
     <div style="padding-left:16px">
-      <h2>Top Navigation Example</h2>
-      <p>Some content..</p>
+    </style>
+</head>
+<body style="text-align: center;">
+    <h1>CHOOSE YOUR PLANET!</h1>
+    <table>
+        <tr>
+            <td><a img href="/go_mercury"><img src="../static/planet_icons/mercury.jpg" alt="Mercury"></td>
+            <td><a img href="/go_venus"><img src="../static/planet_icons/venus.jpg" alt="Venus"></td>
+            <td><a img href="/go_mars"><img src="../static/planet_icons/mars.jpg" alt="Mars"></td>
+        </tr>
+        <tr>
+            <td><a img href="/go_jupiter"><img src="../static/planet_icons/jupiter.jpg" alt="Jupiter"></td>
+            <td><a img href="/go_saturn"><img src="../static/planet_icons/saturn.jpg" alt="Saturn"></td>
+            <td><a img href="/go_uranus"><img src="../static/planet_icons/uranus.jpg" alt="Uranus"></td>
+        </tr>
+        <tr>
+            <td><a img src="../static/planet_icons/empty.jpg" alt=""></td>
+            <td><a img href="/go_neptune"><img src="../static/planet_icons/neptune.jpg" alt="Neptune"></td>
+            <td><a img src="../static/planet_icons/empty.jpg" alt=""></td>
+        </tr>
+    </table>
     </div>
     
     </body>
