--- a/Code/static/blog.css
+++ b/Code/static/blog.css
@@ -1,20 +1,20 @@
 /* Style for the article container */
 .article {
     margin-bottom: 20px;
-    border: 1px solid #ccc;
+    border: 3px solid #ccc;
     padding: 20px;
 }
 
 /* Style for the article title */
 .article h2 {
-    color: #333;
+    color: white;
     font-size: 24px;
 }
 
 /* Style for the article publication date */
 .article p {
     font-style: italic;
-    color: #888;
+    color: #888777;
 }
 
 /* Style for the article summary */
