Added exteded gui support

--- a/Code/templates/home.html
+++ b/Code/templates/home.html
@@ -32,15 +32,22 @@ p span {
   font-weight: bold;
   text-decoration: underline;
 }
-		</style>
+</style>
     <!-- <link rel="stylesheet" href="{{ url_for('static', filename='css/main.css') }}"> -->
+
 </head>
 
 <body>
 <div>
 	<div>
 		<body>
+      <link rel="stylesheet" href="../static/css/dat-gui-custom-look.css">
+
+      <div  class = 'moveGUI'>
+      </div>
       <script type="module" src="../static/js/threejstest.js"></script>
+
+
     </body>
 	</div>
 </div>
