--- a/Code/templates/blog.html
+++ b/Code/templates/blog.html
@@ -3,6 +3,7 @@
 <head>
     <link rel="stylesheet" type="text/css" href="../static/blog.css">
     <link rel="stylesheet" type="text/css" href="../static/styles.css">
+    <script src="script.js"></script>
     <meta charset="UTF-8">
     <title>Home</title>
 </head>
@@ -26,7 +27,7 @@
             <article>
                 <div class="article">
                     <div class="row">
-                        <img class="col" src="../static/planets/mercury.jpg" style = "width: 200px" alt="Article 1 Image">
+                        <img class="col" src="../static/planets/mercury.jpg" style = "width: 200px" >
                         <div class="col">
                             <h2>A Closer Look at Mercury’s Spin and Gravity Reveals the Planet’s Inner Solid Core</h2>
                             <p>Location: Mercury</p>
@@ -38,7 +39,7 @@
                 </div>
                 <div class="article">
                     <div class="row">
-                        <img class="col" src="../static/planets/venus.jpg" style = "width: 200px" alt="Article 1 Image">
+                        <img class="col" src="../static/planets/venus.jpg" style = "width: 200px" >
                         <div class="col">
                             <h2>NASA’s Magellan Data Reveals Volcanic Activity on Venus</h2>
                             <p>Location: Venus</p>
@@ -50,7 +51,7 @@
                 </div>
                 <div class="article">
                     <div class="row">
-                        <img class="col" src="../static/planets/earth.jpg" style = "width: 200px" alt="Article 1 Image">
+                        <img class="col" src="../static/planets/earth.jpg" style = "width: 200px" >
                         <div class="col">
                             <h2>Water-Watching Satellite Monitors Warming Ocean off California Coast</h2>
                             <p>Location: Earth</p>
@@ -62,7 +63,7 @@
                 </div>
                 <div class="article">
                     <div class="row">
-                        <img class="col" src="../static/planets/mars.jpg" style = "width: 200px" alt="Article 1 Image">
+                        <img class="col" src="../static/planets/mars.jpg" style = "width: 200px" >
                         <div class="col">
                             <h2>A Bear on Mars?</h2>
                             <p>Location: Mars</p>
@@ -74,7 +75,7 @@
                 </div>
                 <div class="article">
                     <div class="row">
-                        <img class="col" src="../static/planets/jupiter.jpg" style = "width: 200px" alt="Article 1 Image">
+                        <img class="col" src="../static/planets/jupiter.jpg" style = "width: 200px" >
                         <div class="col">
                             <h2>NASA’s Webb Finds Carbon Source on Surface of Jupiter’s Moon Europa</h2>
                             <p>Location: Jupiter</p>
@@ -86,7 +87,7 @@
                 </div>
                 <div class="article"> 
                     <div class="row">
-                        <img class="col" src="../static/planets/saturn.jpg" style = "width: 200px" alt="Article 1 Image">
+                        <img class="col" src="../static/planets/saturn.jpg" style = "width: 200px" >
                         <div class="col">
                             <h2>Hubble Captures the Start of a New Spoke Season at Saturn</h2>
                             <p>Location: Saturn </p>
@@ -98,7 +99,7 @@
                 </div>
                 <div class="article">
                     <div class="row">
-                        <img class="col" src="../static/planets/uranus.jpg" style = "width: 200px" alt="Article 1 Image">
+                        <img class="col" src="../static/planets/uranus.jpg" style = "width: 200px" >
                         <div class="col">
                             <h2>NASA Scientists Make First Observation of a Polar Cyclone on Uranus</h2>
                             <p>Location: Uran </p>
@@ -110,7 +111,7 @@
                 </div>
                 <div class="article">
                     <div class="row">
-                        <img class="col" src="../static/planets/neptun.jpg" style = "width: 200px" alt="Article 1 Image">
+                        <img class="col" src="../static/planets/neptun.jpg" style = "width: 200px" >
                         <div class="col">
                             <h2>New Study Finds Unexpected Temperature Changes on Neptune</h2>
                             <p>Location: Neptune</p>
