--- a/Code/templates/login.html
+++ b/Code/templates/login.html
@@ -2,6 +2,7 @@
 <html lang="en">
 <head>
   <link rel="stylesheet" type="text/css" href="../static/styles.css">
+  <script src="script.js"></script>
   <meta charset="UTF-8">
   <title>Scorpio Trips</title>
 </head>
@@ -9,7 +10,6 @@
   <video autoplay muted loop id="myVideo">
     <source src="../static/background.mp4" type="video/mp4">
   </video>
-</main>
 <div id="topnav" class="topnav" style="position: fixed;">
   <a href="/">HOME</a>
   <a href="/go_bestsellers">BESTSELLERS</a>
