--- a/Code/static/planets.css
+++ b/Code/static/planets.css
@@ -1,5 +1,178 @@
-.information{
-    text-align: center;
-    color: black;
-    position: fixed;
+.title, .text, .container .content, .pre, .col, a:link, a:visited {
+  color: white;
+}
+* {
+  box-sizing: border-box;
+}
+
+body {
+  font-family: "Helvetica", Sans-Serif;
+  background-size: cover;
+  color: white;
+}
+
+a:hover {
+  color: red;
+}
+
+.row {
+  font-size: 1.5vw;
+}
+.row::after {
+  content: "";
+  clear: both;
+  display: table;
+}
+
+.col {
+  float: left;
+  padding: 0.5vw;
+}
+
+.pre {
+  overflow: auto;
+  max-height: 16vw;
+}
+
+.container {
+  text-align: center;
+  position: relative;
+  margin: 0;
+}
+.container .content {
+  text-align: center;
+  position: absolute;
+  top: 100px;
+  background: #111810;
+  background: rgba(0, 0, 0, 0.5);
+  width: 100%;
+  padding: 1.5vw;
+  font-size: 1.5vw;
+}
+
+.headline {
+  background-color: #FF8000;
+  font-size: 1.5vw;
+  color: white;
+  padding-top: 1.5vw;
+}
+
+.text {
+  font-size: 1.2vw;
+}
+
+.title {
+  font-size: 1.8vw;
+}
+
+.maincolor {
+  background-color: #111810;
+}
+
+.sticky {
+  position: -webkit-sticky;
+  position: sticky;
+  bottom: 0;
+}  
+
+.button {
+  border: none;
+  color: white;
+  padding: 2vw 2vw;
+  text-align: center;
+  text-decoration: none;
+  display: inline-block;
+  font-size: 16px;
+  margin: 6px 6px;
+  cursor: pointer;
+}
+
+#myVideo {
+  position: fixed;
+  top: 0px;
+  right: 0;
+  bottom: 0;
+  min-width: 100%;
+  min-height: 100%;
+}
+
+.topnav {
+  overflow: hidden;
+}
+
+.topnav a {
+  float: left;
+  color: white;
+  text-align: center;
+  padding: 14px 16px;
+  text-decoration: none;
+  font-size: 17px;
+}
+
+.topnav a:hover {
+  background-color: black;
+  color: #EF0B0B;
+}
+
+.topnav a.active {
+  background-color: #EF0B0B;
+  color: black;
+}
+
+.row {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: 100%; /* optional, depending on the layout you want */
+}
+.row::after {
+  content: "";
+  clear: both;
+  display: table;
+  text-align: center;
+}
+
+table {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: 100%; /* optional, depending on the layout you want */
+}
+
+.col {
+  padding: 0.5vw;
+  text-align: center;
+}
+/* .window {
+  width: 400px;
+  margin: 20px auto;
+  padding: 20px;
+  background-color: #fff;
+  border: 1px solid #ddd;
+  border-radius: 5px;
+  box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
+  color: black;
+} */
+
+.modal {
+  display: none;
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-color: rgba(0, 0, 0, 0.7);
+  z-index: 1;
+}
+
+.modal-content {
+  color: black;
+  background-color: #fff;
+  max-width: 400px;
+  margin: 0 auto;
+  padding: 20px;
+  border-radius: 5px;
+  position: relative;
+  top: 50%;
+  transform: translateY(-50%);
 }
