--- a/Code/templates/forgot_pwd.html
+++ b/Code/templates/forgot_pwd.html
@@ -2,6 +2,7 @@
 <html lang="en">
 <head>
   <link rel="stylesheet" type="text/css" href="../static/styles.css">
+  <script src="script.js"></script>
   <meta charset="UTF-8">
   <title>Scorpio Trips</title>
   <video autoplay muted loop id="myVideo">
