--- a/Code/templates/insurance.html
+++ b/Code/templates/insurance.html
@@ -2,6 +2,7 @@
 <html lang="en">
 <head>
     <link rel="stylesheet" type="text/css" href="../static/styles.css">
+    <script src="script.js"></script>
     <meta charset="UTF-8">
     <title>Home</title>
 </head>
