planets ready, w8ing for offers and data

--- a/Code/templates/discover.html
+++ b/Code/templates/discover.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <link rel="stylesheet" type="text/css" href="../static/styles.css">
-    <script src="script.js"></script>
+    <link rel="stylesheet" type="text/css" href="../static/discover.css">
     <meta charset="UTF-8">
     <title>Home</title>
 </head>
@@ -26,24 +26,31 @@
 </head>
 <body style="text-align: center;">
     <h1>CHOOSE YOUR PLANET!</h1>
-    <table>
-        <tr>
-            <td><a img href="/go_mercury"><img src="../static/planet_icons/mercury.jpg" alt="Mercury"></td>
-            <td><a img href="/go_venus"><img src="../static/planet_icons/venus.jpg" alt="Venus"></td>
-            <td><a img href="/go_mars"><img src="../static/planet_icons/mars.jpg" alt="Mars"></td>
-        </tr>
-        <tr>
-            <td><a img href="/go_jupiter"><img src="../static/planet_icons/jupiter.jpg" alt="Jupiter"></td>
-            <td><a img href="/go_saturn"><img src="../static/planet_icons/saturn.jpg" alt="Saturn"></td>
-            <td><a img href="/go_uranus"><img src="../static/planet_icons/uranus.jpg" alt="Uranus"></td>
-        </tr>
-        <tr>
-            <td><a img src="../static/planet_icons/empty.jpg" alt=""></td>
-            <td><a img href="/go_neptune"><img src="../static/planet_icons/neptune.jpg" alt="Neptune"></td>
-            <td><a img src="../static/planet_icons/empty.jpg" alt=""></td>
-        </tr>
-    </table>
-    </div>
+    <main>
+        <article>
+            <div class="article">
+                <div class="row">
+                    <a img href="/go_mercury"><img src="../static/planet_icons/mercury.png" alt="Mercury">     
+                    <a img href="/go_venus"><img src="../static/planet_icons/venus.png" alt="Venus">
+                    <a img href="/go_mars"><img src="../static/planet_icons/mars.png" alt="Mars">
+                </div>
+            </div>
+            <div class="article">
+                <div class="row">
+                    <a img href="/go_jupiter"><img src="../static/planet_icons/jupiter.png" alt="Jupiter">
+                    <a img href="/go_saturn"><img src="../static/planet_icons/saturn.png" alt="Saturn">
+                    <a img href="/go_uranus"><img src="../static/planet_icons/uranus.png" alt="Uranus">
+                </div>
+            </div>
+            <div class="article">
+                <div class="row">
+                    <a img src="../static/planet_icons/empty.jpg" alt="">
+                    <a img href="/go_neptune"><img src="../static/planet_icons/neptune.png" alt="Neptune" style="width: 400px;">
+                    <a img src="../static/planet_icons/empty.jpg" alt="">
+                </div>
+            </div>
+        </article>
+    </main>
     
     </body>
 </html> 
