--- a/Code/static/about.css
+++ b/Code/static/about.css
@@ -2,6 +2,7 @@
 .article {
     margin-bottom: 20px;
     border-bottom: 3px solid #ccc;
+    box-shadow: #888777;
     padding: 20px;
 }
 
@@ -14,7 +15,7 @@
 /* Style for the article publication date */
 .article p {
     font-style: italic;
-    color: #888777;
+    color: #ccc;
 }
 
 /* Style for the article summary */
