Fixed position of rendering window

--- a/Code/static/css/dat-gui-custom-look.css
+++ b/Code/static/css/dat-gui-custom-look.css
@@ -62,8 +62,8 @@
 } */
 
 .dg.a { 
-    margin-right:132px !important; 
-    /* margin-top: */
+    margin-right:267px !important; 
+    margin-top:77px !important;
 }
 
 body {
