--- a/Code/templates/home.html
+++ b/Code/templates/home.html
@@ -30,13 +30,11 @@
       <h2>Top Navigation Example</h2>
       <p>Some content..</p>
     </div>
-      
       <link rel="stylesheet" href="../static/css/dat-gui-custom-look.css">
-
-      <div  class = 'moveGUI'>
+      <!-- <div  class = 'moveGUI'></div> -->
+      <div class ="canvas">
+        <script type="module" src="../static/js/threejstest.js"></script>
       </div>
-      <script type="module" src="../static/js/threejstest.js"></script>
-
 
     </body>
 	</div>
