dropdown menu and background fixed

--- a/Code/templates/recomendations.html
+++ b/Code/templates/recomendations.html
@@ -13,9 +13,16 @@
         <a class="active" href="/go_recomend">OUR RECOMENDATIONS</a>
         <a href="/go_discover">DISCOVER</a>
         <a href="/go_blog">BLOG</a>
-        <a href= "/go_insurance">INSURANCE</a>
-        <a href= "/go_travel_law">TRAVEL LAW</a>
-        <a href= "/go_conditions">CONDITIONS</a>
+        <div class="dropdown">
+            <button class="dropbtn">DOCUMENTS
+                <i class="fa fa-caret-down"></i>
+            </button>
+            <div class="dropdown-content">
+                <a href= "/go_insurance">INSURANCE</a>
+                <a href= "/go_travel_law">TRAVEL LAW</a>
+                <a href= "/go_conditions">CONDITIONS</a>
+            </div>
+        </div>
         <a href="/go_about">ABOUT US</a>
         <a img href="/go_login"><img style="width:40px;"src="../static/login_icon.png"></a>
     </div>
