--- a/Code/static/styles.css
+++ b/Code/static/styles.css
@@ -9,6 +9,8 @@
     font-family: "Helvetica", Sans-Serif;
     background-image: url("../static/stars.jpg");
     background-size: cover;
+    background-repeat: no-repeat;
+    background-attachment: fixed;
     color: white;
   }
 
@@ -100,9 +102,6 @@
 
   .topnav {
     overflow: hidden;
-    /* background-image: url(../static/stars.jpg); */
-    /* background-size: cover; */
-    /* position: fixed; */
   }
   
   .topnav a {
@@ -112,6 +111,8 @@
     padding: 14px 16px;
     text-decoration: none;
     font-size: 17px;
+    display: block;
+    flex: 1;
   }
   
   .topnav a:hover {
@@ -124,6 +125,53 @@
     color: black;
   }
 
+   /* Styl dla opcji rozwijanego menu */
+   .dropdown {
+    float: left;
+    overflow: hidden;
+}
+
+/* Styl dla przycisku rozwijającego menu */
+.dropdown .dropbtn {
+    font-size: 16px;
+    border: none;
+    outline: none;
+    color: white;
+    background-color: inherit;
+    margin: 0;
+    padding: 14px 16px;
+    text-align: center;
+}
+
+/* Styl dla zawartości rozwijanego menu */
+.dropdown-content {
+    display: none;
+    position: absolute;
+    background-color: #333;
+    min-width: 160px;
+    z-index: 1;
+}
+
+/* Styl dla opcji w rozwijanym menu */
+.dropdown-content a {
+    float: none;
+    color: white;
+    padding: 12px 16px;
+    text-decoration: none;
+    display: block;
+    text-align: left;
+}
+
+/* Zmiana koloru opcji w rozwijanym menu po najechaniu myszką */
+.dropdown-content a:hover {
+    background-color: #ddd;
+    color: black;
+}
+
+/* Wyświetlanie rozwijanego menu po najechaniu myszką */
+.dropdown:hover .dropdown-content {
+    display: block;
+}
   .row {
     font-size: 1.5vw;
   }
