--- a/Code/templates/about.html
+++ b/Code/templates/about.html
@@ -15,9 +15,16 @@
         <a href="/go_recomend">OUR RECOMENDATIONS</a>
         <a href="/go_discover">DISCOVER</a>
         <a href="/go_blog">BLOG</a>
-        <a href= "/go_insurance">INSURANCE</a>
-        <a href= "/go_travel_law">TRAVEL LAW</a>
-        <a href= "/go_conditions">CONDITIONS</a>
+        <div class="dropdown">
+            <button class="dropbtn">DOCUMENTS
+                <i class="fa fa-caret-down"></i>
+            </button>
+            <div class="dropdown-content">
+                <a href= "/go_insurance">INSURANCE</a>
+                <a href= "/go_travel_law">TRAVEL LAW</a>
+                <a href= "/go_conditions">CONDITIONS</a>
+            </div>
+        </div>
         <a class="active" href="/go_about">ABOUT US</a>
         <a img href="/go_login"><img style="width:40px;"src="../static/login_icon.png"></a>
     </div>
@@ -47,16 +54,16 @@
                 <h1>OUR VALUES</h1>
                 <div class="row">
                     <div class="col">
-                        <img class="col" src="../static/team_photos/zespol2.jpg" style = "width: 300px" >  
+                        <img class="col" src="../static/team_photos/Education.png" style = "width: 300px" >  
                     </div>
                     <div class="col">
-                        <img class="col" src="../static/team_photos/zespol2.jpg" style = "width: 300px" >  
+                        <img class="col" src="../static/team_photos/Passion.png" style = "width: 300px" >  
                     </div>
                     <div class="col">
-                        <img class="col" src="../static/team_photos/zespol2.jpg" style = "width: 300px" >  
+                        <img class="col" src="../static/team_photos/Quality.png" style = "width: 300px" >  
                     </div>
                     <div class="col">
-                        <img class="col" src="../static/team_photos/zespol2.jpg" style = "width: 300px" >  
+                        <img class="col" src="../static/team_photos/Impact.png" style = "width: 300px" >  
                     </div>
                 </div>
             </div>
