--- a/Code/templates/bestsellers.html
+++ b/Code/templates/bestsellers.html
@@ -2,6 +2,7 @@
 <html lang="en">
 <head>
     <link rel="stylesheet" type="text/css" href="../static/styles.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <script src="script.js"></script>
     <meta charset="UTF-8">
     <title>Home</title>
@@ -14,9 +15,16 @@
         <a href="/go_recomend">OUR RECOMENDATIONS</a>
         <a href="/go_discover">DISCOVER</a>
         <a href="/go_blog">BLOG</a>
-        <a href= "/go_insurance">INSURANCE</a>
-        <a href= "/go_travel_law">TRAVEL LAW</a>
-        <a href= "/go_conditions">CONDITIONS</a>
+        <div class="dropdown">
+            <button class="dropbtn">DOCUMENTS
+                <i class="fa fa-caret-down"></i>
+            </button>
+            <div class="dropdown-content">
+                <a href= "/go_insurance">INSURANCE</a>
+                <a href= "/go_travel_law">TRAVEL LAW</a>
+                <a href= "/go_conditions">CONDITIONS</a>
+            </div>
+        </div>
         <a href="/go_about">ABOUT US</a>
         <a img href="/go_login"><img style="width:40px;"src="../static/login_icon.png"></a>
     </div>
