--- a/Code/templates/about.html
+++ b/Code/templates/about.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <link rel="stylesheet" type="text/css" href="../static/styles.css">
-    <link rel="stylesheet" type="text/css" href="../static/about.css">
+    <!-- <link rel="stylesheet" type="text/css" href="../static/about.css"> -->
     <script src="script.js"></script>
     <meta charset="UTF-8">
     <title>Home</title>
@@ -11,17 +11,17 @@
 
     <div id="topnav" class="topnav">
         <a href="/">HOME</a>
-        <a href="/go_bestsellers">BESTSELLERS</a>
         <a href="/go_recomend">OUR RECOMENDATIONS</a>
         <a href="/go_discover">DISCOVER</a>
         <a href="/go_blog">BLOG</a>
         <div class="dropdown">
-            <button class="dropbtn">DOCUMENTS
+            <button class="dropbtn">TRAVEL DETAILS
                 <i class="fa fa-caret-down"></i>
             </button>
             <div class="dropdown-content">
+                <a href= "/go_transport">TRANSPORT</a>
                 <a href= "/go_insurance">INSURANCE</a>
-                <a href= "/go_travel_law">TRAVEL LAW</a>
+                <a href= "/go_travel_law">DEPATRURE REGULATIONS</a>
                 <a href= "/go_conditions">CONDITIONS</a>
             </div>
         </div>
@@ -51,21 +51,15 @@
                 </div>
             </div>
             <div class="article">
-                <h1>OUR VALUES</h1>
-                <div class="row">
-                    <div class="col">
-                        <img class="col" src="../static/team_photos/Education.png" style = "width: 300px" >  
+                <h1 style="text-align: center;">OUR VALUES</h1>
+                    <div class="row">
+                        <img class="col" src="../static/team_photos/Passion.png" style = "width: 400px" >  
+                        <img class="col" src="../static/team_photos/Education.png" style = "width: 400px" >   
+                    <!-- </div>
+                    <div class="row"> -->
+                        <!-- <img class="col" src="../static/team_photos/Quality.png" style = "width: 400px" >   -->
+                        <img class="col" src="../static/team_photos/Impact.png" style = "width: 400px" >  
                     </div>
-                    <div class="col">
-                        <img class="col" src="../static/team_photos/Passion.png" style = "width: 300px" >  
-                    </div>
-                    <div class="col">
-                        <img class="col" src="../static/team_photos/Quality.png" style = "width: 300px" >  
-                    </div>
-                    <div class="col">
-                        <img class="col" src="../static/team_photos/Impact.png" style = "width: 300px" >  
-                    </div>
-                </div>
             </div>
             <div class="article">
                 <div class="row">
