--- a/Code/templates/login.html
+++ b/Code/templates/login.html
@@ -11,17 +11,18 @@
   </video>
 <div id="topnav" class="topnav" style="position: fixed;">
   <a href="/">HOME</a>
-  <a href="/go_bestsellers">BESTSELLERS</a>
   <a href="/go_recomend">OUR RECOMENDATIONS</a>
   <a href="/go_discover">DISCOVER</a>
   <a href="/go_blog">BLOG</a>
   <div class="dropdown">
-    <button class="dropbtn">DOCUMENTS
+      <button class="dropbtn">TRAVEL DETAILS
         <i class="fa fa-caret-down"></i>
     </button>
     <div class="dropdown-content">
+        <a href= "/go_transport">TRANSPORT</a>
+        <a href= "/go_hotel">ACCOMODATION</a>
         <a href= "/go_insurance">INSURANCE</a>
-        <a href= "/go_travel_law">TRAVEL LAW</a>
+        <a href= "/go_travel_law">DEPATRURE REGULATIONS</a>
         <a href= "/go_conditions">CONDITIONS</a>
     </div>
 </div>
