--- a/Code/templates/hotel.html
+++ b/Code/templates/hotel.html
@@ -2,8 +2,6 @@
 <html lang="en">
 <head>
     <link rel="stylesheet" type="text/css" href="../static/styles.css">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
-    <script src="script.js"></script>
     <meta charset="UTF-8">
     <title>Home</title>
 </head>
@@ -11,17 +9,18 @@
 
     <div id="topnav" class="topnav">
         <a href="/">HOME</a>
-        <a class="active" href="/go_bestsellers">BESTSELLERS</a>
         <a href="/go_recomend">OUR RECOMENDATIONS</a>
         <a href="/go_discover">DISCOVER</a>
         <a href="/go_blog">BLOG</a>
         <div class="dropdown">
-            <button class="dropbtn">DOCUMENTS
+            <button class="dropbtn">TRAVEL DETAILS
                 <i class="fa fa-caret-down"></i>
             </button>
             <div class="dropdown-content">
+                <a href= "/go_transport">TRANSPORT</a>
+                <a class="active" href= "/go_hotel">ACCOMODATION</a>
                 <a href= "/go_insurance">INSURANCE</a>
-                <a href= "/go_travel_law">TRAVEL LAW</a>
+                <a href= "/go_travel_law">DEPATRURE REGULATIONS</a>
                 <a href= "/go_conditions">CONDITIONS</a>
             </div>
         </div>
@@ -29,10 +28,17 @@
         <a img href="/go_login"><img style="width:40px;"src="../static/login_icon.png"></a>
     </div>
     
-    <div style="padding-left:16px">
-      <h2>Top Navigation Example</h2>
-      <p>Some content..</p>
-    </div>
+    <main>
+        <article class="article">
+            <div class="row">
+                <div class="col">
+                    <h1>ACCOMODATION</h1>
+                    <p class="summary">Most accommodation during our trip is on board our ship. Depending on the tour, we also make use of local accommodations that are located in orbit or on the surface of a celestial body.</p>
+                </div>
+                <img class="col" src="../static/travel/hotel.jpg" style = "width: 500px;" >
+            </div>
+        </article>
+    </main>
     
     </body>
 </html> 
