--- a/Code/templates/travel_law.html
+++ b/Code/templates/travel_law.html
@@ -9,17 +9,18 @@
 
     <div id="topnav" class="topnav">
         <a href="/">HOME</a>
-        <a href="/go_bestsellers">BESTSELLERS</a>
         <a href="/go_recomend">OUR RECOMENDATIONS</a>
         <a href="/go_discover">DISCOVER</a>
         <a href="/go_blog">BLOG</a>
         <div class="dropdown">
-            <button class="dropbtn">DOCUMENTS
+            <button class="dropbtn">TRAVEL DETAILS
                 <i class="fa fa-caret-down"></i>
             </button>
             <div class="dropdown-content">
+                <a href= "/go_transport">TRANSPORT</a>
+                <a href= "/go_hotel">ACCOMODATION</a>
                 <a href= "/go_insurance">INSURANCE</a>
-                <a class="active" href= "/go_travel_law">TRAVEL LAW</a>
+                <a href= "/go_travel_law">DEPATRURE REGULATIONS</a>
                 <a href= "/go_conditions">CONDITIONS</a>
             </div>
         </div>
@@ -27,10 +28,17 @@
         <a img href="/go_login"><img style="width:40px;"src="../static/login_icon.png"></a>
     </div>
     
-    <div style="padding-left:16px">
-      <h2>Top Navigation Example</h2>
-      <p>Some content..</p>
-    </div>
+    <main>
+        <article class="article">
+            <div class="row">
+                <div class="col">
+                    <h1>DEPATRURE REGULATIONS</h1>
+                    <p class="summary">Persons travelling into space are bound by space law, which should be consulted at www.spacelaw.gov.</p>
+                </div>
+                <img class="col" src="../static/travel/departure.jpeg" style = "width: 500px;" >
+            </div>
+        </article>
+    </main>
     
     </body>
 </html> 
